// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should close on click outside popup (closeOnDocumentClick = true ) 1`] = `
<PopupTest
  closeOnDocumentClick={true}
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should close on click outside popup (closeOnDocumentClick = true ) 2`] = `
<PopupTest
  closeOnDocumentClick={true}
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={true}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should render correctly  1`] = `
<Popup
  arrow={true}
  arrowStyle={Object {}}
  className=""
  closeOnDocumentClick={false}
  contentStyle={Object {}}
  defaultOpen={false}
  modal={false}
  mouseEnterDelay={100}
  mouseLeaveDelay={100}
  offset={0}
  on="click"
  onClose={[Function]}
  onOpen={[Function]}
  overlayStyle={Object {}}
  position="bottom center"
  trigger={
    <button>
       Trigger
    </button>
  }
  triggerOn="click"
>
  popup content
</Popup>
`;

exports[`it should render correctly on click   1`] = `
<PopupTest>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should render correctly on click (triggerOn = 'click')  1`] = `
<PopupTest
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should render correctly on hover (triggerOn = 'focus')  1`] = `
<PopupTestInput
  triggerOn="focus"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <input
        type="text"
      />
    }
    triggerOn="focus"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <input
      key="T"
      onClick={[Function]}
      type="text"
    />
  </Popup>
</PopupTestInput>
`;

exports[`it should render correctly on hover (triggerOn = 'hover')  1`] = `
<PopupTest
  triggerOn="hover"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="hover"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the bottom center position   1`] = `
<PopupTest
  position="bottom center"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the bottom left position   1`] = `
<PopupTest
  position="bottom left"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom left"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the bottom right position   1`] = `
<PopupTest
  position="bottom right"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom right"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the left bottom position   1`] = `
<PopupTest
  position="left bottom"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="left bottom"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the left center position   1`] = `
<PopupTest
  position="left center"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="left center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the left top position   1`] = `
<PopupTest
  position="left top"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="left top"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the right bottom position   1`] = `
<PopupTest
  position="right bottom"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="right bottom"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the right center position   1`] = `
<PopupTest
  position="right center"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="right center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the right top position   1`] = `
<PopupTest
  position="right top"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="right top"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the top center position   1`] = `
<PopupTest
  position="top center"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="top center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the top left position   1`] = `
<PopupTest
  position="top left"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="top left"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it should rendered in the top right position   1`] = `
<PopupTest
  position="top right"
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="top right"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it shouldn't close on click outside popup  1`] = `
<PopupTest
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;

exports[`it shouldn't close on click outside popup  2`] = `
<PopupTest
  triggerOn="click"
>
  <Popup
    arrow={true}
    arrowStyle={Object {}}
    className=""
    closeOnDocumentClick={false}
    contentStyle={Object {}}
    defaultOpen={false}
    modal={false}
    mouseEnterDelay={100}
    mouseLeaveDelay={100}
    offset={0}
    on="click"
    onClose={[Function]}
    onOpen={[Function]}
    overlayStyle={Object {}}
    position="bottom center"
    trigger={
      <button>
         Trigger
      </button>
    }
    triggerOn="click"
  >
    <div
      key="H"
      style={
        Object {
          "left": "0px",
          "position": "absolute",
          "top": "0px",
        }
      }
    />
    <div
      className="popup-overlay"
      key="O"
      style={
        Object {
          "bottom": "0",
          "left": "0",
          "position": "fixed",
          "right": "0",
          "top": "0",
        }
      }
    />
    <div
      className="popup-content "
      key="C"
      onClick={[Function]}
      style={
        Object {
          "background": "rgb(255, 255, 255)",
          "border": "1px solid rgb(187, 187, 187)",
          "boxShadow": "rgba(0, 0, 0, 0.2) 0px 1px 3px",
          "padding": "5px",
          "position": "absolute",
          "width": "200px",
          "zIndex": "2",
        }
      }
    >
      <div
        style={
          Object {
            "background": "rgb(255, 255, 255)",
            "boxShadow": "rgba(0, 0, 0, 0.2) 1px 1px 1px",
            "height": "10px",
            "margin": "-5px",
            "position": "absolute",
            "transform": "rotate(45deg)",
            "width": "10px",
            "zIndex": "-1",
          }
        }
      />
      popup content
    </div>
    <button
      key="T"
      onClick={[Function]}
    >
       Trigger
    </button>
  </Popup>
</PopupTest>
`;
